// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> checkbox renders correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfCDU eoxewg sc-dlfmHC fdJvLc"
    data-checked="false"
    data-indeterminate="false"
    data-testid="checkbox"
    name="test"
  />
</DocumentFragment>
`;

exports[`<Input /> email renders correctly 1`] = `
<DocumentFragment>
  <input
    class="sc-eCstZk iZYJTM"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    type="email"
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> renders correctly 1`] = `
<DocumentFragment>
  <input
    class="sc-eCstZk iZYJTM"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> renders correctly 2`] = `
<DocumentFragment>
  <input
    class="sc-eCstZk iZYJTM"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    type="password"
    width="100%"
  />
</DocumentFragment>
`;

exports[`<Input /> textarea renders correctly 1`] = `
<DocumentFragment>
  <textarea
    class="sc-jSguLX guzoyw"
    cursor="pointer"
    name="test"
    placeholder="Placeholder"
    width="100%"
  />
</DocumentFragment>
`;
